Implemented frontend structure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <% layout('layout') -%>
+<% script('/javascripts/main.js') -%>
 <div id='wrapper'>
   <div id='msgbox'>
-    <span class='msg'>Message Box</span>
+    <span class='msg'></span>
   </div>
   <div id='formWrapper'>
     <form id='loginForm'>
