--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,8 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="javascripts/jquery-2.1.1.min.js"></script>
-    <script src="javascripts/main.js"></script>
+    <%- scripts %>
+    <!--script src="javascripts/main.js"></script-->
   </head>
   <body>
     <%- body %>
